--- a/.gitignore
+++ b/.gitignore
@@ -216,3 +216,5 @@ FakesAssemblies/
 **/*.Server/ModelManifest.xml
 _Pvt_Extensions
 /Table en Ville/nbproject/private/
+/Table en Ville/tmp/nbproject/private/
+/Table en Ville/tmp/vendor/
