--- a/.gitignore
+++ b/.gitignore
@@ -218,3 +218,4 @@ _Pvt_Extensions
 /Table en Ville/nbproject/private/
 /Table en Ville/tmp/nbproject/private/
 /Table en Ville/tmp/vendor/
+/RaspberryPi.SimpleThermostat/ThermostatControl/nbproject/private/
